# lista-telefonos-spam

./: .gitignore  Makefile  README.md  config.yaml  contactos_spam.vcf  lista_numeros_spam.txt  numeros_spam.json  numeros_spam_blocker.txt  numeros_spam_dialer.txt  pyproject.toml  requirements.txt  split_vcf.sh
.github/workflows/: ci.yml  export-android-ios.yml  scraper.yml  split-vcf.yml
search/: android_guide.html  index.html  iphone_guide.html  style.css
src/: __init__.py  clients.py  exporter.py  http_client.py  models.py  scraper.py  spider.py
tests/: test_exporter.py  test_models.py
